--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,17 +15,17 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  background: #f6f9ff;
-  color: #444444;
+  background: #eee;
+  color: #cff4fc;
 }
 
 a {
-  color: #4154f1;
+  color: #2c69dd;
   text-decoration: none;
 }
 
 a:hover {
-  color: #717ff5;
+  color: #5371ce;
   text-decoration: none;
 }
 
@@ -36,6 +36,7 @@ h4,
 h5,
 h6 {
   font-family: "Nunito", sans-serif;
+  color: #484343;
 }
 
 /*--------------------------------------------------------------
@@ -45,6 +46,8 @@ h6 {
   margin-top: 60px;
   padding: 20px 30px;
   transition: all 0.3s;
+  background-color : #eff0f1;
+
 }
 
 @media (max-width: 1199px) {
@@ -64,7 +67,7 @@ h6 {
   font-size: 24px;
   margin-bottom: 0;
   font-weight: 600;
-  color: #012970;
+  color: #484343;
 }
 
 /*--------------------------------------------------------------
@@ -307,25 +310,25 @@ h6 {
 .breadcrumb {
   font-size: 14px;
   font-family: "Nunito", sans-serif;
-  color: #899bbd;
+  color: #484343;
   font-weight: 600;
 }
 
 .breadcrumb a {
-  color: #899bbd;
+  color: #484343;
   transition: 0.3s;
 }
 
 .breadcrumb a:hover {
-  color: #51678f;
+  color: #484343;
 }
 
 .breadcrumb .breadcrumb-item::before {
-  color: #899bbd;
+  color: #484343;
 }
 
 .breadcrumb .active {
-  color: #51678f;
+  color: #484343;
   font-weight: 600;
 }
 
@@ -372,7 +375,7 @@ h6 {
 .logo span {
   font-size: 26px;
   font-weight: 700;
-  color: #012970;
+  color: #fbfbfb;
   font-family: "Nunito", sans-serif;
 }
 
@@ -381,7 +384,7 @@ h6 {
   z-index: 997;
   height: 60px;
   box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
-  background-color: #fff;
+  background-color: #484343;
   padding-left: 20px;
   /* Toggle Sidebar Button */
   /* Search Bar */
@@ -391,7 +394,7 @@ h6 {
   font-size: 32px;
   padding-left: 10px;
   cursor: pointer;
-  color: #012970;
+  color: #f6f6f6;
 }
 
 .header .search-bar {
@@ -474,7 +477,7 @@ h6 {
 }
 
 .header-nav .nav-profile {
-  color: #012970;
+  color: #f6f6f6;
 }
 
 .header-nav .nav-profile img {
@@ -610,7 +613,7 @@ h6 {
   scrollbar-width: thin;
   scrollbar-color: #aab7cf transparent;
   box-shadow: 0px 0px 20px rgba(1, 41, 112, 0.1);
-  background-color: #fff;
+  background-color: #484343;
 }
 
 @media (max-width: 1199px) {
